--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfa Ediciones - Web</title>
-    <link rel="stylesheet" href="styles.css?v=3" />
+    <link rel="stylesheet" href="styles.css?v=4" />
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' fill='%232C3E50'/%3E%3Ctext x='32' y='40' font-size='32' text-anchor='middle' fill='white' font-family='Arial, sans-serif'%3EA%3C/text%3E%3C/svg%3E" />
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script defer src="app.js?v=3"></script>
+    <script defer src="app.js?v=4"></script>
 </head>
 <body>
     <header class="topbar">
@@ -132,9 +132,7 @@
         <section id="screen-admin-panel" class="screen">
             <div class="card">
                 <h2>Panel de Administrador</h2>
-                <div class="row">
-                    <button id="toggleLockBtn" class="danger">Bloquear/Desbloquear app</button>
-                </div>
+                <!-- oculto por política: no mostrar el bloqueo global en la web pública -->
                 <div class="row">
                     <input id="newAdminPass" type="password" placeholder="Nueva contraseña" />
                     <button id="setAdminPassBtn">Cambiar contraseña</button>
@@ -165,3 +163,4 @@
 </html>
 
 
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
