--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfa Ediciones - Web</title>
-    <link rel="stylesheet" href="styles.css?v=8" />
+    <link rel="stylesheet" href="styles.1756140647.css" />
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' fill='%232C3E50'/%3E%3Ctext x='32' y='40' font-size='32' text-anchor='middle' fill='white' font-family='Arial, sans-serif'%3EA%3C/text%3E%3C/svg%3E" />
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script defer src="app.js?v=8"></script>
+    <script defer src="app.1756140647.js"></script>
 </head>
 <body>
     <header class="topbar">
@@ -90,12 +90,13 @@
                     <input id="vendedorCodigo" placeholder="Código vendedor" />
                 </div>
                 <div class="row">
-                    <input id="importeTotal" type="number" step="0.01" placeholder="Importe total" />
-                    <input id="valorCuota" type="number" step="0.01" placeholder="Valor cuota" />
+                    <input id="importeTotal" type="text" placeholder="Importe total" />
+                    <input id="valorCuota" type="text" placeholder="Valor cuota" />
                     <select id="metodoPago">
                         <option>CBU</option>
                         <option>Tarjeta</option>
                         <option>MercadoPago</option>
+                        <option>Cliente Editorial</option>
                     </select>
                 </div>
                 <div id="pagoCBU" class="row">
@@ -173,3 +174,10 @@
 
 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
+
+
+
+
+
+
+
