trigger deploy: reglas Firestore

--- a/web/index.html
+++ b/web/index.html
@@ -96,7 +96,7 @@
                         <option>CBU</option>
                         <option>Tarjeta</option>
                         <option>MercadoPago</option>
-                        <option>Cliente Editorial</option>
+                        <option>CL</option>
                     </select>
                 </div>
                 <div id="pagoCBU" class="row">
