--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script defer src="app.1756140647.js"></script>
+    <script defer src="app.js"></script>
 </head>
 <body>
     <header class="topbar">
